          the "root" columns are in fact injected from the right rs side
        - Fix the join optimizer to correctly preserve the non-multi path to
          a multi relationship ( x -> might_have y -> has_many z )
        - Fix object-derived custom-relationship resultsets to resultsources
          with multilevel monikers (e.g. $schema->source('Foo::Bar') )

    * Misc
        - Rewire all warnings to a new Carp-like implementation internal
          to DBIx::Class, and remove the Carp::Clan dependency
        - Only load Class::C3 and friends if necessary ($] < 5.010)
        - Greatly reduced loading of non-essential modules to aid startup
          time (mainly benefiting CGI users)
        - Make sure all namespaces are clean of rogue imports
        - Dropped DBI req 2 years back - everything works with 1.57, no
          point requiring something newer

0.08190-TRIAL 2011-01-24 15:35 (UTC)

    * New Features / Changes
        - Support for completely arbitrary SQL::Abstract-based conditions
          in all types of relationships

0.08127 2011-01-19 16:40 (UTC)
    * New Features / Changes
        - Schema/resultsource instances are now crossreferenced via a new
          system guaranteeing leak-free mutually assured destruction
        - DBIx::Class now warns when the user erroneously supplies
          AutoCommit => 0 to connect()
        - A warning is also issued before forcing the RaiseError
          setting of externally supplied DBI handles
        - Switch to a warning when find() is invoked with both a 'key'
          argument and a NULL-containing condition to satisfy the named
          constraint. Previously (starting with 0.08124) an exception was
          thrown
        - Switch to a warning when a commit is attempted with an out-of-sync
          transaction_depth (someone issued a begin externally to DBIC).
          Previously (starting with 0.08124) an exception was thrown

    * Fixes